sm/sm-b2b-connector/main/default/objects/Related_Product__c/Related_Product__c.object-meta.xml
<CustomObject>
    <label>B2B Related Product</label>
    <nameField>
        <label>B2B Related Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>