sm/sm-b2b-connector/main/default/objects/Related_Product__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>