sm/sm-b2b-connector/main/default/objects/Related_Product__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Related Products (Related Product)</relationshipLabel>
    <relationshipName>RelatedProducts</relationshipName>
    <type>Lookup</type>
</CustomField>