sm/sm-b2b-connector/main/default/objects/Related_Product__c/fields/Related_Product_Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Product_Relation_Type__c</fullName>
    <label>Related Product Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>RequiredItem</fullName>
            </value>
            <value>
                <fullName>CrossSell</fullName>
            </value>
            <value>
                <fullName>UpSell</fullName>
            </value>
            <value>
                <fullName>Complementary</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>