sm/sm-b2b-connector/main/default/objects/Related_Product__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>