sm/sm-b2b-connector/main/default/objects/Related_Product__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>